Fixed tx history scroll on small screen

--- a/src/Components/TransectionHistry/style.module.scss
+++ b/src/Components/TransectionHistry/style.module.scss
@@ -60,7 +60,7 @@
       gap: 5px;
       align-items: center;
       justify-content: left;
-      width: 130px;
+      width: 124px;
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
